--- a/index.html
+++ b/index.html
@@ -90,10 +90,16 @@
          <main>
             <div class="middle">
                <h1>WORK IN PROGRESS<br></h1>
-               <h3 hidden>(And always will be)</h3>
+               <h3>(And always will be)</h3>
+			   <br>
                <hr>
+			   <br>
                <p>Since the beginning of work on this site:</p>
                <p id="demoscript" style="font-size:30px"></p>
+			   <br>
+			   <hr>
+			   <br>
+			   <p>You can find latest changes in <u onclick="transitionToPage('./changelog.html')">Changelog</u> </p>
             </div>
          </main>
          <footer>
